@@ -1,3 +1,8 @@
+2014-09-09 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	Set CSV Reader qualifier and separator
+
 2014-09-02 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
